apps/base/home-assistant/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-kowi-it-route
  namespace: home-assistant
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway-system
      sectionName: https-home-assistant
  hostnames:
    - "home.kowi.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=15552000"
      backendRefs:
        - name: home-assistant
          kind: Service
          port: 8123
